# armos

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  TROUBLESHOOTING.md  dump.rdb  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: accuracy_benchmark.py  address_benchmark.py  run_benchmark.py  token_overhead.py
src/armos/: __init__.py  guard.py  models.py
src/armos/detection/: engine.py
src/armos/detection/recognisers/: aadhaar.py  address.py  pan.py  standard.py
src/armos/masking/: tokenizer.py
src/armos/masking/vault/: __init__.py  base.py  memory.py  redis.py
src/armos/wrappers/: anthropic.py  base.py  openai.py
tests/: test_base_mixin.py  test_detection.py  test_guard.py  test_guard_async.py  test_import_safety.py  test_masking.py  test_model_integration.py  test_streaming.py  test_vault.py  test_wrapper_anthropic.py  test_wrapper_anthropic_async.py  test_wrapper_openai.py  test_wrapper_openai_async.py  test_wrapper_openai_v1.py
