[project]
name = "armos"
version = "0.1.0"
description = "Automatic PII masking for OpenAI and Anthropic SDKs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
license-files = ["LICENSE"]

dependencies = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
all = ["redis>=5.0.0", "openai>=1.0.0", "anthropic>=0.20.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/armos"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
