[project]
name = "armos"
version = "0.1.6"
description = "Automatic PII masking for OpenAI and Anthropic SDKs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
license-files = ["LICENSE"]
authors = [
    {name = "Armos", email = "dhroovgupta7@gmail.com"},
]
keywords = [
    "pii", "privacy", "masking", "anonymization", "openai", "anthropic",
    "llm", "ai", "presidio", "data-protection", "gdpr",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/armos-ai/armos"
Source = "https://github.com/armos-ai/armos"
"Bug Tracker" = "https://github.com/armos-ai/armos/issues"

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
all = ["redis>=5.0.0", "openai>=1.0.0", "anthropic>=0.20.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/armos"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
