[project]
name = "armos"
version = "1.5.0"
description = "Automatic PII masking for OpenAI and Anthropic SDKs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
license-files = ["LICENSE"]
authors = [
    {name = "Armos", email = "dhroovgupta7@gmail.com"},
]
keywords = [
    "pii", "privacy", "masking", "anonymization", "openai", "anthropic",
    "llm", "ai", "presidio", "data-protection", "gdpr",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    "click>=8.0.0",
    "huggingface_hub>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/armos-ai/armos-python"
Source = "https://github.com/armos-ai/armos-python"
"Bug Tracker" = "https://github.com/armos-ai/armos-python/issues"

[project.optional-dependencies]
redis = ["redis>=5.0.0", "certifi>=2024.0.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
all = ["redis>=5.0.0", "certifi>=2024.0.0", "openai>=1.0.0", "anthropic>=0.20.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.7.0",
    "tiktoken>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:typer",
    "ignore::DeprecationWarning:click",
]

[tool.hatch.build.targets.wheel]
packages = ["src/armos"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
